# SparrowNPU

./: README.md  pyproject.toml
.cursor/rules/: verilog-rtl.mdc
data/quantization/: model.onnx  model.onnx.data  quantized_model.onnx
docs/: hardwareDesign.md  kernel_ref.py  kernels.md  plan.md
hardware/: .gitignore
hardware/files_vivadi/: README.md
hardware/multiplier/: multiplier.xpr
hardware/multiplier/docs/: AXI_STREAM_SYSTOLIC.md
hardware/multiplier/multiplier.cache/sim/: ssm.db
hardware/multiplier/multiplier.runs/.jobs/: vrs_config_2.xml  vrs_config_6.xml
hardware/multiplier/multiplier.runs/impl_1/: .init_design.begin.rst  .vivado.begin.rst  gen_run.xml  htr.txt  rundef.js  runme.sh  tb_systolic_2x2.tcl  tb_systolic_2x2.vdi  tb_systolic_2x2_drc_opted.rpt  tb_systolic_2x2_drc_opted.rpx  tb_systolic_2x2_opt.dcp
hardware/multiplier/multiplier.runs/synth_1/: .vivado.begin.rst  gen_run.xml  htr.txt  rundef.js  runme.sh  tb_systolic_2x2.dcp  tb_systolic_2x2.tcl  tb_systolic_2x2.vds  tb_systolic_2x2_utilization_synth.rpt
hardware/multiplier/multiplier.sim/sim_1/behav/xsim/: compile.sh  elaborate.sh  simulate.sh  tb_mul1d_behav.wdb  tb_mul_acc_behav.wdb  tb_mul_acc_vlog.prj  xelab.pb  xvlog.pb
hardware/multiplier/multiplier.srcs/sources_1/new/: mul.v  mul_acc.v  systolic_2x2.v  systolic_2x2_axis.v  systolic_feeder.v  tb_mul.v  tb_mul_acc.v  tb_systolic_2x2.v  tb_systolic_2x2_axis.v  tb_systolic_feeder.v
hardware/multiplier/multiplier.srcs/utils_1/imports/synth_1/: tb_systolic_2x2.dcp
src/quantization/: createModel.py
(+24 files in other folders)
