[project]
name = "sparrownpu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.6",
    "pylance>=1.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
